--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "prisma db push && node server/index.js",
+    "prisma": "prisma"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
+    "@prisma/client": "^6.13.0",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "express": "^5.1.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.370.0",
-    "date-fns": "^3.6.0"
+    "prisma": "^6.13.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -21,5 +27,6 @@
     "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.4.0",
     "vite": "^5.2.0"
-  }
+  },
+  "type": "module"
 }
