--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.370.0",
     "prisma": "^6.13.0",
+    "react-big-calendar": "^1.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
