--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "server": "prisma db push && node server/index.js",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "test": "TS_NODE_TRANSPILE_ONLY=1 node --loader ts-node/esm --test tests/utils.test.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
@@ -26,6 +27,8 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "ts-node": "^10.9.2",
+    "@types/node": "^20.12.7",
     "typescript": "^5.4.0",
     "vite": "^5.2.0"
   },
