--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^5.1.0",
     "framer-motion": "^11.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.370.0",
     "prisma": "^6.13.0",
-    "react-big-calendar": "^1.11.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "ts-node": "^10.9.2",
-    "@types/node": "^20.12.7",
     "typescript": "^5.4.0",
     "vite": "^5.2.0"
   },
